2010-07-26  Roland McGrath  <roland@redhat.com>

	* dwarf_getlocation_implicit_pointer.c: New file.
	* Makefile.am (libdw_a_SOURCES): Add it.
	* libdw.map (ELFUTILS_0.149): New set.
	Add dwarf_getlocation_implicit_pointer.
	* libdw.h: Declare it.

	* dwarf_offdie.c (do_offdie): Renamed to __libdw_offdie, made global.
	(dwarf_offdie, dwarf_offdie_types): Update callers.
	* libdwP.h: Declare it.

	* dwarf.h: Add DW_OP_GNU_implicit_pointer.
	* dwarf_getlocation.c (__libdw_intern_expression): Handle it.

2010-08-24  Roland McGrath  <roland@redhat.com>

	* libdw.map (ELFUTILS_0.149): New set.  Add dwfl_dwarf_line.

2010-07-27  Roland McGrath  <roland@redhat.com>

	* dwarf_formref_die.c: Fix sig8 hash insertion.

2010-08-20  Mark Wielaard  <mjw@redhat.com>

	* c++/dwarf_data (dwarf_data::directory_table::directory_table):
	Cleaner way of handling first push_back.

2010-08-19  Mark Wielaard  <mjw@redhat.com>

	* c++/dwarf_data (dwarf_data::directory_table::directory_table):
	Treat first entry "special", can be NULL/empty.

2010-08-18  Roland McGrath  <roland@redhat.com>

	* c++/subr.hh (subr::container_tail_equal): New function.
	* c++/dwarf_data (dwarf_data::directory_table::operator==): Use it
	to ignore the compilation directory (first table element).

2010-07-21  Roland McGrath  <roland@redhat.com>

	* c++/dwarf_ref_maker (dwarf_ref_maker::seen): Add copy constructor
	to avoid default copying of uninitialized iterator.

2010-07-13  Roland McGrath  <roland@redhat.com>

	* c++/dwarf_comparator (dwarf_tracker_base): Replace visit method with
	visitor type.
	(dwarf_comparator): Update caller.

2010-07-01  Roland McGrath  <roland@redhat.com>

	* c++/values.cc (is_list, what_space): Handle v4 CU rules.

2010-06-23  Roland McGrath  <roland@redhat.com>

	* cfi.c (dwarf_cfi_validate_fde): Function removed.
	* libdw.h: Remove it.
	* libdw.map: Likewise.

2010-06-22  Roland McGrath  <roland@redhat.com>

	* dwarf_getlocation.c (check_constant_offset): data[48] are constant.
